# Sponge-lang

./: CMakeLists.txt  README.md
.github/workflows/: meta-ultra-xagi.yml  meta-ultra.yml  spongelang.yml  ultra-exec.yml
examples/: xagi_fullstack.sp
src/: main.cpp  sponge_meta.cpp  sponge_meta.hpp  spongelang.cpp
src/meta/: CMakeLists.txt  meta2_processor.cpp  meta2_processor.hpp  meta_absorb_loader.cpp  meta_absorb_loader.hpp  meta_engine.cpp  meta_engine.hpp  meta_ir.cpp  meta_ir.hpp  meta_parser.cpp  meta_parser.hpp  meta_schema.cpp  meta_schema.hpp  meta_vm.cpp  meta_vm.hpp
tools/: generate_meta.py
